{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 10,
  "lineage": "23ec8dda-170e-c8f0-07fb-284a61a4a511",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716612577713:internet-gateway/igw-0083369bd8c885c6f",
            "id": "igw-0083369bd8c885c6f",
            "owner_id": "716612577713",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0338520c37baa1965"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716612577713:route-table/rtb-0483984e5f08dea12",
            "id": "rtb-0483984e5f08dea12",
            "owner_id": "716612577713",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0083369bd8c885c6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-crt"
            },
            "tags_all": {
              "Name": "dev-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0338520c37baa1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b82df76af877edbe",
            "route_table_id": "rtb-0483984e5f08dea12",
            "subnet_id": "subnet-0b267046da6674435"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-public-crt",
            "aws_subnet.dev-subnet-public-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716612577713:security-group/sg-033fc62f5d1116e16",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033fc62f5d1116e16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230408223459851400000001",
            "name_prefix": "terraform-",
            "owner_id": "716612577713",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0338520c37baa1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716612577713:subnet/subnet-0b267046da6674435",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b267046da6674435",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716612577713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-public-1"
            },
            "tags_all": {
              "Name": "dev-subnet-public-1"
            },
            "vpc_id": "vpc-0338520c37baa1965"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:716612577713:vpc/vpc-0338520c37baa1965",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032cc4468a8eeef04",
            "default_route_table_id": "rtb-0b34ef97294c1e284",
            "default_security_group_id": "sg-0631d1f7490e2f67f",
            "dhcp_options_id": "dopt-0317d8d2a46e561af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0338520c37baa1965",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b34ef97294c1e284",
            "owner_id": "716612577713",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}